--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bower": "^1.7.9",
     "pulp": "^8.1.1",
-    "purescript-psa": "^0.3.7"
+    "purescript-psa": "^0.3.7",
+    "purescript": "^0.8"
   }
 }
