--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "benchmark": "^2.1.0",
     "bower": "^1.7.9",
     "pulp": "^8.1.1",
-    "purescript-psa": "^0.3.7",
-    "purescript": "^0.8"
+    "purescript": "^0.8",
+    "purescript-psa": "^0.3.7"
   }
 }
